<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_note_list">Note Keeper</string>
    <string name="title_activity_note">Edit Note</string>
    <string name="title_activity_main">Note Keeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Note Keeper</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="note_title_hint">Note title</string>
    <string name="note_text_hint">Note text</string>
    <string name="nav_share_message">Don\'t you think you\'ve shared enough</string>
    <string name="nav_send_message">Send</string>
    <string name="textview_demo">TextView</string>
    <string name="image_content_description">image</string>
    <string name="menu_item_notes_text">Notes</string>
    <string name="menu_item_courses_text">Courses</string>
    <string name="menu_item_communicate_text">Communicate</string>
    <string name="menu_item_share_text">Share</string>
    <string name="menu_item_send_text">Send</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="display_name_title">Display Name</string>
    <string name="reply_title">Default reply action</string>
    <string name="default_username">Your Name</string>
    <string name="default_email">your.email@host.com</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_title_email_address">Email Address</string>
    <string name="pref_title_favorite_social">Favorite Social Network</string>

    <string name="default_favorite_social">https://facebook.com</string>
    <string name="action_set_reminder">Set reminder</string>
    <string name="action_send_as_email">Send as email</string>
    <string name="action_next">Next</string>
    <string name="action_cancel">Cancel</string>
</resources>