<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="@string/default_username"
        android:title="@string/display_name_title"
        app:key="user_display_name"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue="@string/default_email"
        android:inputType="textEmailAddress"
        android:key="user_email_address"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_email_address"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        android:defaultValue="@string/default_favorite_social"
        android:title="@string/pref_title_favorite_social"
        app:entries="@array/pref_entries_favorite_social"
        app:entryValues="@array/pref_values_favorite_social"
        app:key="user_favorite_social"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>